--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     <div class="bg-gray-50 p-6 rounded-lg">
                         <h3 class="text-xl font-bold text-secondary mb-6">Demandez un devis</h3>
                         
-                        <form>
+                        <form name="devis" method="POST" data-netlify="true">   <input type="hidden" name="form-name" value="devis">
                             <div class="mb-4">
                                 <label for="name" class="block text-gray-700 mb-2">Nom</label>
                                 <input type="text" id="name" class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:border-primary">
