--- a/index.html
+++ b/index.html
@@ -275,6 +275,33 @@
                         </div>
                         
                         <!-- Formulaire connecté à votre email via FormSubmit -->
+                        <form action="https://formsubmit.co/espritcreateur80@gmail.com" method="POST">
+  <input type="hidden" name="_next" value="https://site-rumilly-nettoyage.netlify.app/merci.html">
+  <input type="hidden" name="_captcha" value="false">
+
+  <div class="mb-4">
+    <label for="name" class="block text-gray-700 mb-2">Nom</label>
+    <input type="text" id="name" name="name" class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:border-primary" required>
+  </div>
+
+  <div class="mb-4">
+    <label for="email" class="block text-gray-700 mb-2">Email</label>
+    <input type="email" id="email" name="email" class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:border-primary" required>
+  </div>
+
+  <div class="mb-4">
+    <label for="phone" class="block text-gray-700 mb-2">Téléphone</label>
+    <input type="tel" id="phone" name="phone" class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:border-primary">
+  </div>
+
+  <div class="mb-4">
+    <label for="message" class="block text-gray-700 mb-2">Message</label>
+    <textarea id="message" name="message" rows="4" class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:border-primary" required></textarea>
+  </div>
+
+  <button type="submit" class="bg-primary hover-bg-primary text-white px-6 py-2 rounded font-medium transition duration-300">Envoyer</button>
+</form>
+
                         <form id="contact-form" action="https://formsubmit.co/espritcreateur80@gmail.com" method="POST">
                             <!-- Ajout d'un sujet fixe pour les emails -->
                             <input type="hidden" name="_subject" value="Nouvelle demande de devis - Rumilly Nettoyage">
