--- a/merci.html
+++ b/merci.html
@@ -2,21 +2,26 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Merci pour votre message</title>
+  <title>Merci pour votre demande</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f8f5f2;
-      color: #1e3f20;
       text-align: center;
       padding: 100px;
+      background-color: #f7f7f7;
     }
-    h1 { font-size: 2rem; margin-bottom: 20px; }
-    p { font-size: 1.1rem; }
+    h1 {
+      color: #1e3f20;
+      font-size: 2rem;
+    }
+    p {
+      color: #333;
+      font-size: 1.1rem;
+    }
   </style>
 </head>
 <body>
-  <h1>Merci pour votre demande !</h1>
-  <p>Nous vous répondrons très prochainement.</p>
+  <h1>Merci !</h1>
+  <p>Votre demande a bien été envoyée. Nous vous contacterons rapidement.</p>
 </body>
 </html>
