--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
                 <div class="flex items-center mb-4 md:mb-0">
                     <div class="logo-placeholder">
                         <span class="text-primary font-bold">LOGO</span>
-                    </div>
+                    <div class="logo-placeholder text-4xl text-primary">
+  <i class="fas fa-broom"></i>
+</div>
+
                     <div class="ml-4">
                         <h1 class="text-2xl font-bold text-primary">Rumilly Nettoyage</h1>
                         <p class="text-sm text-gray-600">Depuis 1988</p>
