--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             background-color: #2a4f2c;
         }
         
-      logo-placeholder {
+      -placeholder {
             width: 150px;
             height: 150px;
             display: flex;
@@ -70,9 +70,9 @@
         <div class="container mx-auto px-4 py-6">
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="flex items-center mb-4 md:mb-0">
-                    <div class="logo-placeholder">
-                        <span class="text-primary font-bold">LOGO</span>
-                    <div class="logo-placeholder text-4xl text-primary">
+                    <div class="-placeholder">
+                        <span class="text-primary font-bold"></span>
+                    <div class="-placeholder text-4xl text-primary">
   <i class="fas fa-broom"></i>
 </div>
 
