--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     <!-- Hero Section -->
     <section id="accueil" class="relative bg-primary text-white py-20" data-aos="fade-up">
-        <div class="absolute inset-0 bg-cover bg-center opacity-30" style="background-image: url('https://via.placeholder.com/1600x900');"></div>
+        <div class="absolute inset-0 bg-cover bg-center opacity-30 pointer-events-none" style="background-image: url('https://via.placeholder.com/1600x900');"></div>
         <div class="container mx-auto px-4 text-center">
             <h2 class="text-4xl md:text-5xl font-bold mb-6">Nettoyage professionnel en Haute-Savoie</h2>
             <p class="text-xl md:text-2xl mb-8">Des bureaux propres pour une entreprise saine</p>
