--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
             @apply px-6 py-2 rounded font-medium transition duration-300;
         }
     </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="script.js"></script>
 </head>
 <body>
 <!-- Header -->
@@ -401,7 +403,6 @@
         </div>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
         // Mobile menu toggle
         document.querySelector('button[aria-label="Ouvrir le menu"]').addEventListener('click', function() {
