Mise à jour : statistiques en vert (secondary) dans la section hero

--- a/index.html
+++ b/index.html
@@ -177,16 +177,16 @@
                 <!-- Statistiques -->
                 <div class="grid grid-cols-2 md:grid-cols-3 gap-8 mt-16">
                     <div class="text-center">
-                        <div class="text-3xl md:text-4xl font-bold text-white mb-2">35+</div>
-                        <div class="text-white font-medium">Années d'expérience</div>
+                        <div class="text-3xl md:text-4xl font-bold text-secondary mb-2">35+</div>
+                        <div class="text-secondary font-medium">Années d'expérience</div>
                     </div>
                     <div class="text-center">
-                        <div class="text-3xl md:text-4xl font-bold text-white mb-2">100+</div>
-                        <div class="text-white font-medium">Clients satisfaits</div>
+                        <div class="text-3xl md:text-4xl font-bold text-secondary mb-2">100+</div>
+                        <div class="text-secondary font-medium">Clients satisfaits</div>
                     </div>
                     <div class="text-center">
-                        <div class="text-3xl md:text-4xl font-bold text-white mb-2">24/7</div>
-                        <div class="text-white font-medium">Service réactif</div>
+                        <div class="text-3xl md:text-4xl font-bold text-secondary mb-2">24/7</div>
+                        <div class="text-secondary font-medium">Service réactif</div>
                     </div>
                 </div>
             </div>
