--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="description" content="Rumilly Nettoyage offre des services de nettoyage professionnel et écoresponsable en Haute-Savoie. Contactez-nous pour un devis rapide.">
     <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <!-- GSAP pour les animations -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://site-rumilly-nettoyage.netlify.app/">
@@ -152,7 +155,7 @@
                 </div>
                 
                 <!-- Titre principal -->
-                <h2 class="text-4xl md:text-6xl font-bold mb-6 text-white leading-tight">
+                <h2 class="text-4xl md:text-6xl font-bold mb-6 text-white leading-tight hero-title">
                     Nettoyage professionnel<br>
                     <span class="text-secondary">en Haute-Savoie</span>
                 </h2>
