Amélioration des couleurs de fond : harmonisation des sections avec dégradés et contrastes subtils

--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
   
 
     <!-- Hero Section -->
-    <section id="accueil" class="relative min-h-[80vh] flex items-center justify-center overflow-hidden" data-aos="fade-up">
+    <section id="accueil" class="relative min-h-[80vh] flex items-center justify-center overflow-hidden bg-gradient-to-br from-primary/90 to-primary" data-aos="fade-up">
         <!-- Background avec overlay -->
         <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('https://images.unsplash.com/photo-1581578731548-c64695cc6952?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');">
-            <div class="absolute inset-0 bg-primary opacity-80"></div>
+            <div class="absolute inset-0 bg-primary/80"></div>
         </div>
         
         <!-- Contenu principal -->
@@ -204,7 +204,7 @@
     </section>
 
     <!-- À propos -->
-    <section id="apropos" class="py-16 bg-white" data-aos="fade-up">
+    <section id="apropos" class="py-16 bg-gray-50" data-aos="fade-up">
         <div class="container mx-auto px-4">
             <div class="text-center mb-12">
                 <h2 class="text-3xl font-bold text-primary mb-4">À propos de nous</h2>
@@ -244,7 +244,7 @@
     </section>
 
     <!-- Services -->
-    <section id="services" class="section-padding bg-gray-50" data-aos="fade-up">
+    <section id="services" class="section-padding bg-white" data-aos="fade-up">
         <div class="container mx-auto container-padding">
             <div class="text-center mb-12">
                 <h2 class="text-3xl font-bold text-primary mb-4">Nos services</h2>
@@ -316,7 +316,7 @@
     </section>
 
     <!-- Avis clients -->
-    <section class="section-padding bg-gray-50" data-aos="fade-up">
+    <section class="section-padding bg-gradient-to-br from-gray-50 to-secondary/5" data-aos="fade-up">
         <div class="container mx-auto container-padding">
             <div class="text-center mb-12">
                 <h2 class="text-3xl font-bold text-primary mb-4">Ce que disent nos clients</h2>
@@ -412,7 +412,7 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact" class="section-padding bg-white" data-aos="fade-up">
+    <section id="contact" class="section-padding bg-gray-50" data-aos="fade-up">
         <div class="container mx-auto container-padding">
             <div class="text-center mb-12">
                 <h2 class="text-3xl font-bold text-primary mb-4">Contactez-nous</h2>
@@ -535,7 +535,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-primary text-white py-8">
+    <footer class="bg-gradient-to-br from-primary to-primary/90 text-white py-8">
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="mb-4 md:mb-0">
