Ajout d'un favicon personnalisé avec l'icône de balai de nettoyage

--- a/merci.html
+++ b/merci.html
@@ -6,7 +6,8 @@
     <title>Merci - Rumilly Nettoyage</title>
     <!-- SEO Meta Tags -->
     <meta name="description" content="Merci pour votre demande de devis. Nous vous répondrons dans les plus brefs délais.">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/favicon.svg">
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
