--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Rumilly Nettoyage - Nettoyage professionnel en Haute-Savoie</title>
     <!-- SEO Meta Tags -->
     <meta name="description" content="Rumilly Nettoyage offre des services de nettoyage professionnel et écoresponsable en Haute-Savoie. Contactez-nous pour un devis rapide.">
-    <link rel="icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/favicon.svg">
     <!-- GSAP pour les animations -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
