Amélioration de la section avis : fond dégradé, avatars personnalisés et mise en page responsive

--- a/index.html
+++ b/index.html
@@ -310,30 +310,32 @@
     </section>
 
     <!-- Avis clients -->
-    <section class="section-padding bg-gray-50" data-aos="fade-up">
+    <section class="section-padding bg-gradient-to-br from-primary/5 to-secondary/5" data-aos="fade-up">
         <div class="container mx-auto container-padding">
             <div class="text-center mb-12">
                 <h2 class="text-3xl font-bold text-primary mb-4">Ce que disent nos clients</h2>
                 <div class="w-20 h-1 bg-secondary mx-auto"></div>
             </div>
             
-            <div class="testimonials-container">
+            <div class="testimonials-container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Avis 1 -->
-                <div class="testimonial-bubble" data-aos="fade-up" data-aos-delay="100">
+                <div class="testimonial-bubble bg-white rounded-2xl shadow-lg p-6 transform transition-all duration-300 hover:scale-105" data-aos="fade-up" data-aos-delay="100">
                     <div class="flex items-start space-x-4">
-                        <div class="avatar-circle bg-primary text-white flex-shrink-0">
-                            <span class="text-lg font-medium">MD</span>
+                        <div class="avatar-circle bg-gradient-to-br from-primary to-secondary text-white flex-shrink-0 w-16 h-16 rounded-full flex items-center justify-center shadow-lg">
+                            <svg class="w-8 h-8" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="12" cy="8" r="4" fill="currentColor"/>
+                                <path d="M20 21C20 16.5817 16.4183 13 12 13C7.58172 13 4 16.5817 4 21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                            </svg>
                         </div>
                         <div class="flex-1">
-                            <div class="bubble-content bg-white p-6 rounded-2xl shadow-sm relative">
-                                <div class="bubble-arrow"></div>
+                            <div class="bubble-content relative">
                                 <p class="text-gray-700 italic mb-4">"Un service impeccable et une équipe très professionnelle. Je recommande vivement !"</p>
                                 <div class="flex items-center justify-between">
                                     <div>
                                         <h4 class="font-bold text-primary">Marie D.</h4>
                                         <p class="text-sm text-gray-600">Entreprise locale</p>
                                     </div>
-                                    <div class="text-secondary">
+                                    <div class="text-yellow-400">
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
@@ -347,21 +349,23 @@
                 </div>
 
                 <!-- Avis 2 -->
-                <div class="testimonial-bubble" data-aos="fade-up" data-aos-delay="200">
+                <div class="testimonial-bubble bg-white rounded-2xl shadow-lg p-6 transform transition-all duration-300 hover:scale-105" data-aos="fade-up" data-aos-delay="200">
                     <div class="flex items-start space-x-4">
-                        <div class="avatar-circle bg-primary text-white flex-shrink-0">
-                            <span class="text-lg font-medium">PL</span>
+                        <div class="avatar-circle bg-gradient-to-br from-primary to-secondary text-white flex-shrink-0 w-16 h-16 rounded-full flex items-center justify-center shadow-lg">
+                            <svg class="w-8 h-8" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="12" cy="8" r="4" fill="currentColor"/>
+                                <path d="M20 21C20 16.5817 16.4183 13 12 13C7.58172 13 4 16.5817 4 21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                            </svg>
                         </div>
                         <div class="flex-1">
-                            <div class="bubble-content bg-white p-6 rounded-2xl shadow-sm relative">
-                                <div class="bubble-arrow"></div>
+                            <div class="bubble-content relative">
                                 <p class="text-gray-700 italic mb-4">"Des locaux toujours impeccables. Une équipe fiable et réactive."</p>
                                 <div class="flex items-center justify-between">
                                     <div>
                                         <h4 class="font-bold text-primary">Pierre L.</h4>
                                         <p class="text-sm text-gray-600">Bureau d'études</p>
                                     </div>
-                                    <div class="text-secondary">
+                                    <div class="text-yellow-400">
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
@@ -375,21 +379,23 @@
                 </div>
 
                 <!-- Avis 3 -->
-                <div class="testimonial-bubble" data-aos="fade-up" data-aos-delay="300">
+                <div class="testimonial-bubble bg-white rounded-2xl shadow-lg p-6 transform transition-all duration-300 hover:scale-105" data-aos="fade-up" data-aos-delay="300">
                     <div class="flex items-start space-x-4">
-                        <div class="avatar-circle bg-primary text-white flex-shrink-0">
-                            <span class="text-lg font-medium">SM</span>
+                        <div class="avatar-circle bg-gradient-to-br from-primary to-secondary text-white flex-shrink-0 w-16 h-16 rounded-full flex items-center justify-center shadow-lg">
+                            <svg class="w-8 h-8" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="12" cy="8" r="4" fill="currentColor"/>
+                                <path d="M20 21C20 16.5817 16.4183 13 12 13C7.58172 13 4 16.5817 4 21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                            </svg>
                         </div>
                         <div class="flex-1">
-                            <div class="bubble-content bg-white p-6 rounded-2xl shadow-sm relative">
-                                <div class="bubble-arrow"></div>
+                            <div class="bubble-content relative">
                                 <p class="text-gray-700 italic mb-4">"Un service de qualité avec des produits respectueux de l'environnement. Parfait !"</p>
                                 <div class="flex items-center justify-between">
                                     <div>
                                         <h4 class="font-bold text-primary">Sophie M.</h4>
                                         <p class="text-sm text-gray-600">Agence immobilière</p>
                                     </div>
-                                    <div class="text-secondary">
+                                    <div class="text-yellow-400">
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
