--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     </section>
 
     <!-- À propos -->
-    <section id="apropos" class="py-16 bg-white" data-aos="fade-up">
+    <section id="apropos" class="py-24 bg-white" data-aos="fade-up">
         <div class="container mx-auto px-4">
             <div class="text-center mb-12">
                 <h2 class="text-3xl font-bold text-primary mb-4">À propos de nous</h2>
@@ -244,7 +244,7 @@
     </section>
 
     <!-- Services -->
-    <section id="services" class="section-padding bg-gray-50" data-aos="fade-up">
+    <section id="services" class="py-24 bg-gray-50" data-aos="fade-up">
         <div class="container mx-auto container-padding">
             <div class="text-center mb-12">
                 <h2 class="text-3xl font-bold text-primary mb-4">Nos services</h2>
@@ -310,7 +310,7 @@
     </section>
 
     <!-- Avis clients -->
-    <section class="section-padding bg-gradient-to-br from-primary/5 to-secondary/5" data-aos="fade-up">
+    <section class="py-24 bg-gradient-to-br from-primary/5 to-secondary/5" data-aos="fade-up">
         <div class="container mx-auto container-padding">
             <div class="text-center mb-12">
                 <h2 class="text-3xl font-bold text-primary mb-4">Ce que disent nos clients</h2>
@@ -412,7 +412,7 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact" class="section-padding bg-white" data-aos="fade-up">
+    <section id="contact" class="py-24 bg-white" data-aos="fade-up">
         <div class="container mx-auto container-padding">
             <div class="text-center mb-12">
                 <h2 class="text-3xl font-bold text-primary mb-4">Contactez-nous</h2>
