--- a/index.html
+++ b/index.html
@@ -187,16 +187,16 @@
                 <!-- Statistiques -->
                 <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 md:gap-8 mt-12 md:mt-16">
                     <div class="text-center">
-                        <div class="text-2xl md:text-4xl font-bold text-secondary mb-2">35+</div>
-                        <div class="text-secondary font-medium">Années d'expérience</div>
+                        <div class="text-2xl md:text-4xl font-bold text-white mb-2">35+</div>
+                        <div class="text-white font-medium">Années d'expérience</div>
                     </div>
                     <div class="text-center">
-                        <div class="text-2xl md:text-4xl font-bold text-secondary mb-2">100+</div>
-                        <div class="text-secondary font-medium">Clients satisfaits</div>
+                        <div class="text-2xl md:text-4xl font-bold text-white mb-2">100+</div>
+                        <div class="text-white font-medium">Clients satisfaits</div>
                     </div>
                     <div class="text-center">
-                        <div class="text-2xl md:text-4xl font-bold text-secondary mb-2">24/7</div>
-                        <div class="text-secondary font-medium">Service réactif</div>
+                        <div class="text-2xl md:text-4xl font-bold text-white mb-2">24/7</div>
+                        <div class="text-white font-medium">Service réactif</div>
                     </div>
                 </div>
             </div>
